; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_netback.c_xenvif_ctrl_action.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/xen-netback/extr_netback.c_xenvif_ctrl_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xenvif = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64, i64 }
%struct.xen_netif_ctrl_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.xenvif*)* @xenvif_ctrl_action to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xenvif_ctrl_action(%struct.xenvif* %0) #0 {
  %2 = alloca %struct.xenvif*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.xen_netif_ctrl_request, align 4
  store %struct.xenvif* %0, %struct.xenvif** %2, align 8
  br label %6

6:                                                ; preds = %36, %1
  %7 = load %struct.xenvif*, %struct.xenvif** %2, align 8
  %8 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* %3, align 8
  %13 = load %struct.xenvif*, %struct.xenvif** %2, align 8
  %14 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %4, align 8
  %17 = call i32 (...) @rmb()
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* %3, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %6
  br label %48

22:                                               ; preds = %6
  br label %23

23:                                               ; preds = %27, %22
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* %3, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %36

27:                                               ; preds = %23
  %28 = load %struct.xenvif*, %struct.xenvif** %2, align 8
  %29 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %28, i32 0, i32 0
  %30 = load i64, i64* %4, align 8
  %31 = call i32 @RING_COPY_REQUEST(%struct.TYPE_4__* %29, i64 %30, %struct.xen_netif_ctrl_request* %5)
  %32 = load i64, i64* %4, align 8
  %33 = add nsw i64 %32, 1
  store i64 %33, i64* %4, align 8
  %34 = load %struct.xenvif*, %struct.xenvif** %2, align 8
  %35 = call i32 @process_ctrl_request(%struct.xenvif* %34, %struct.xen_netif_ctrl_request* %5)
  br label %23

36:                                               ; preds = %23
  %37 = load i64, i64* %4, align 8
  %38 = load %struct.xenvif*, %struct.xenvif** %2, align 8
  %39 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  store i64 %37, i64* %40, align 8
  %41 = load i64, i64* %4, align 8
  %42 = add nsw i64 %41, 1
  %43 = load %struct.xenvif*, %struct.xenvif** %2, align 8
  %44 = getelementptr inbounds %struct.xenvif, %struct.xenvif* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 1
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 1
  store i64 %42, i64* %47, align 8
  br label %6

48:                                               ; preds = %21
  ret void
}

declare dso_local i32 @rmb(...) #1

declare dso_local i32 @RING_COPY_REQUEST(%struct.TYPE_4__*, i64, %struct.xen_netif_ctrl_request*) #1

declare dso_local i32 @process_ctrl_request(%struct.xenvif*, %struct.xen_netif_ctrl_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
